--- a/coc-settings.json
+++ b/coc-settings.json
@@ -8,14 +8,25 @@
   "python.linting.mypyEnabled": true,
   "python.linting.lintOnSave": true,
   "python.linting.pydocstyleEnabled": false,
+  "python.pythonPath": "python3",
+
+
+  // ruby
+  "solargraph.diagnostics": true,
+  "solargraph.formatting": true,
+  "solargraph.autoformat": true,
 
   // json
   "json.enable": true,
   "json.format.enable": true,
 
   // global
-  "coc.preferences.formatOnSaveFiletypes": ["python", "json"],
+  "coc.preferences.formatOnSaveFiletypes": ["python", "json", "ruby"],
   "coc.preferences.colorSupport": true,
+
+  "signature.enable": true,
+  "signature.hideOnTextChange": true,
+  "signature.target": "float",
 
   // linting
   "diagnostic.checkCurrentLine": true,
@@ -25,5 +36,20 @@
   "diagnostic.errorSign": "x",
   "diagnostic.warningSign": "!",
   "diagnostic.infoSign": "?",
-  "diagnostic.hintSign": "·"
+  "diagnostic.hintSign": "·",
+
+  // LSPs
+  "languageserver": {
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
+      "filetypes": ["go"]
+    },
+    "bash": {
+      "command": "bash-language-server",
+      "args": ["start"],
+      "filetypes": ["sh"],
+      "ignoredRootPaths": ["~"]
+    }
+  }
 }
