Unified version of the vim setup
Split up settings into distinct vimL files.
Conditionally use Google settings.

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -11,7 +11,7 @@
   "suggest.noselect": false,
   "suggest.enablePreview": true,
   "suggest.enablePreselect": true,
-  "suggest.numberSelect": true,
+  "suggest.numberSelect": false,
   "suggest.floatEnable": true,
   "suggest.acceptSuggestionOnCommitCharacter": true,
 
