refactor: remove tags and git-secrets fully

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 cache
-bundle
 *.bk
 .netrwhist
 *.shada
-init.vim
-undodir
 plugin
 *.old
 .mypy_cache
 vim_history
-tags
-tags/*
+/data
+/data/*
 /local
 /local/*
 /lua/local/*
